--- a/market/src/main/res/values/colors.xml
+++ b/market/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <color name="tab_text_color_selected">#55d180</color>
+    <color name="tab_text_color_normal">#737373</color>
+
+    <color name="bg_tab_pressed">#6633b5e5</color>
+    <color name="bg_tab_normal">#00000000</color>
+
+
 </resources>
