--- a/market/src/main/res/layout/activity_main.xml
+++ b/market/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     <com.gaojun.appmarket.ui.view.PagerTab
         android:id="@+id/pager_tab"
         android:layout_width="match_parent"
-        android:layout_height="42dp">
-
-    </com.gaojun.appmarket.ui.view.PagerTab>
+        android:layout_height="42dp"
+        android:background="@drawable/bg_tab"
+        />
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
