--- a/market/src/main/res/layout/page_home_detail.xml
+++ b/market/src/main/res/layout/page_home_detail.xml
@@ -14,7 +14,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,5 +55,12 @@
 
         </LinearLayout>
     </ScrollView>
+    <FrameLayout
+        android:id="@+id/fl_detail_download"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/detail_bottom_bg" />
 </LinearLayout>
 
