--- a/market/src/main/res/layout/list_item_home.xml
+++ b/market/src/main/res/layout/list_item_home.xml
@@ -61,11 +61,11 @@
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@mipmap/ic_download"
-                    />
+
+                <FrameLayout
+                    android:id="@+id/fl_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/tv_download"
                     android:text="下载"
