--- a/market/src/main/res/values/colors.xml
+++ b/market/src/main/res/values/colors.xml
@@ -11,5 +11,12 @@
     <color name="bg_tab_pressed">#6633b5e5</color>
     <color name="bg_tab_normal">#00000000</color>
 
-
+    <color name="txt_title">#ff333333</color>
+    <color name="txt_small">#ff7a7a7a</color>
+    <color name="txt_big">#ff717171</color>
+    <color name="item_divider">#ffd7d7d7</color>
+    <color name="detail_screen_bg">#adadad</color>
+    <color name="progress">#0294f0</color>
+    <color name="menu_bg_normal">#f0f1f3</color>
+    <color name="menu_bg_press">#cecece</color>
 </resources>
